--- a/src/app/folder/folder.page.html
+++ b/src/app/folder/folder.page.html
@@ -1,9 +1,9 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
+  <ion-toolbar color="primary">
+    <ion-buttons slot="end">
+      <ion-menu-button color="light"></ion-menu-button>
     </ion-buttons>
-    <ion-title>{{ folder }}</ion-title>
+    <ion-title>MKSU Students</ion-title>
   </ion-toolbar>
 </ion-header>
 
