--- a/src/app/folder/folder.page.html
+++ b/src/app/folder/folder.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="end">
       <ion-menu-button color="light"></ion-menu-button>
     </ion-buttons>
-    <ion-title>MKSU Students</ion-title>
+    <ion-title color="light">MKSU Students</ion-title>
   </ion-toolbar>
 </ion-header>
 
