--- a/src/app/folder/folder.page.html
+++ b/src/app/folder/folder.page.html
@@ -8,14 +8,16 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">{{ folder }}</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <!-- <ion-header collapse="condense"> -->
+    <!-- <ion-toolbar> -->
+      <!-- <ion-title size="large">{{ folder }}</ion-title> -->
+    <!-- </ion-toolbar> -->
+  <!-- </ion-header> -->
 
-  <div id="container">
+  <!-- <div id="container">
     <strong class="capitalize">{{ folder }}</strong>
     <p>Explore <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  </div> -->
+
+ <app-button></app-button> 
 </ion-content>
