--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
           </ion-menu-toggle>
         </ion-list>
 <!-- share button -->
-<ion-item color="primary" button="true" lines="none"><ion-icon slot="start" name="share-social-sharp" color="light"></ion-icon> Share</ion-item>
+<ion-item color="primary" button="true" detail="true" lines="none"><ion-icon slot="start" name="share-social-sharp" color="light"></ion-icon> <ion-label color="light">Share</ion-label></ion-item>
 
         <ion-list id="labels-list">
           <ion-list-header class="whatsapp-header">Whatsapp Groups.</ion-list-header>
