--- a/src/app/components/button/button.component.html
+++ b/src/app/components/button/button.component.html
@@ -1,7 +1,7 @@
-<ion-item *ngFor="let buttonInfo of buttonInfos">
+<!-- <ion-item  color="light" lines="none" [fullscreen]="true"> -->
 
-  <ion-item class="main-btn" color="primary" expand="block" expand="full" size="default" strong="true" button="true"   detail="true" >
+  <ion-item *ngFor="let buttonInfo of buttonInfos" class="main-btn" color="primary" expand="block" expand="full" size="small" strong="true" button="true" lines="none"  detail="true" >
     <ion-icon slot="start"  md="{{buttonInfo.icon}}" color="light"></ion-icon>
     <ion-label color="light">{{buttonInfo.title}}</ion-label>
   </ion-item> 
-</ion-item>
+<!-- </ion-item> -->
