--- a/src/app/components/button/button.component.scss
+++ b/src/app/components/button/button.component.scss
@@ -1,5 +1,6 @@
 .main-btn{
-    margin-top: 2.5vw;
+    margin: 2.5vw auto 0;
     border-radius: 10px;
-    min-width: 90vw;
+     max-width: 90vw;
+    // padding: 0 2.5vw;
 }
