--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,25 +8,25 @@
 
           <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages; let i = index">
             <ion-item routerDirection="root" [href]="[p.url]" lines="none" detail="false" routerLinkActive="selected">
-              <ion-icon slot="start"  [md]="p.icon" color="primary"></ion-icon>
+              <ion-icon slot="start"  [md]="p.icon" color="uniColor"></ion-icon>
               <ion-label>{{ p.title }}</ion-label>
             </ion-item>
           </ion-menu-toggle>
         </ion-list>
 <!-- share button -->
 
-<ion-item (click)="shareLink()" color="primary" button="true" detail="true" lines="none"><ion-icon slot="start" name="share-social-sharp" color="light"></ion-icon> <ion-label color="light">Share</ion-label></ion-item>
+<ion-item (click)="shareLink()" color="uniColor" button="true" detail="true" lines="none"><ion-icon slot="start" name="share-social-sharp" color="light"></ion-icon> <ion-label color="light">Share</ion-label></ion-item>
 
         <ion-list id="labels-list">
           <ion-list-header class="whatsapp-header">Whatsapp Groups.</ion-list-header>
           <ion-note>Contact us to add more groups.</ion-note>
 
           <ion-item *ngFor="let label of labels" [href]="[label.url]" lines="none">
-            <ion-icon slot="start"  md="logo-whatsapp" color="primary"></ion-icon>
+            <ion-icon slot="start"  md="logo-whatsapp" color="uniColor"></ion-icon>
             <ion-label >{{ label.title }}</ion-label>
           </ion-item> 
         </ion-list>
-        <ion-item href="https://web.facebook.com/groups/1591817791051184" lines="none"><ion-icon slot="start" name="logo-facebook" color="primary"></ion-icon> Facebook Group</ion-item>
+        <ion-item href="https://web.facebook.com/groups/1591817791051184" lines="none"><ion-icon slot="start" name="logo-facebook" color="uniColor"></ion-icon> Facebook Group</ion-item>
       </ion-content>
     </ion-menu>
     <ion-router-outlet id="main-content"></ion-router-outlet>
