--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
         </ion-list>
 <!-- share button -->
 
-<ion-item (click)="shareLink()" color="uniColor" button="true" detail="true" lines="none"><ion-icon slot="start" name="share-social-sharp" color="dark"></ion-icon> <ion-label >Share</ion-label></ion-item>
+<ion-item (click)="shareLink()" color="uniColor" button="true" detail="true" lines="none"><ion-icon slot="start" name="share-social-sharp" color="white"></ion-icon> <ion-label >Share</ion-label></ion-item>
 
         <ion-list id="labels-list">
           <ion-list-header class="whatsapp-header">Whatsapp Groups.</ion-list-header>
