--- a/src/app/folder/folder.page.html
+++ b/src/app/folder/folder.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar color="uniColor">
     <ion-buttons slot="end">
-      <ion-menu-button color="dark"></ion-menu-button>
+      <ion-menu-button color="white"></ion-menu-button>
     </ion-buttons>
     <ion-title >MKSU Students</ion-title>
   </ion-toolbar>
